# diera-prod

./: .gitignore  README.md  todo.md
diera/: albums.pkl  manage.py  pyproject.toml  requirements.txt
diera/archive/: queries.py  urls.py  views.py
diera/archive/templatetags/: archive_tags.py
diera/archive_cms_integration/: apps.py  cms_apps.py
diera/calendar_cms_integration/: apps.py  cms_apps.py
diera/calendar_cms_integration/templates/: upcoming_events.html
diera/diera/: asgi.py  cms_plugins.py  models.py  queries.py  settings.py  urls.py  wsgi.py
diera/diera/static/: about.css  archive.css  event.css  featured_article.css  festival.css  festival_year.css  festivals.css  galleries.css  global.css  home.css  newsletter.css  privacy.css  program.css
diera/diera/templates/: about.html  base.html  cookie_consent.html  event.html  featured_article.html  festival.html  festival_programming_plugin.html  festival_year.html  festivals.html  footer.html  galleries.html  header.html  home.html  newsletter.html  privacy_protection.html  program.html
diera/diera/templatetags/: custom_tags.py
diera/event_calendar/: forms.py  queries.py  urls.py  views.py
diera/event_calendar/templatetags/: calendar_tags.py
diera/page_extensions/: admin.py  apps.py  cms_toolbars.py  models.py
diera/page_extensions/migrations/: 0001_initial.py  0002_featuredextension.py  0003_auto_20210324_1041.py  0004_auto_20210324_1043.py  (+2 more)
diera/photologue_cms_integration/: apps.py  cms_apps.py  urls.py
diera/wizards/: cms_wizards.py  forms.py  queries.py  widgets.py
(+65 files in other folders)
